Run lint and prettier
