# src/handlers/getHomeHandler.js
@@ -1,11 +1,11 @@
 function schema() {
-    return {};
+  return {};
 }
 
 function handler({ homeService }) {
-    return async function(req, reply) {
-        reply.code(200).send({ "message": "Fiuumber API payments" });
-    };
+  return async function (req, reply) {
+    reply.code(200).send({ message: "Fiuumber API payments" });
+  };
 }
 
 module.exports = { handler, schema };
