# src/public/swagger.json
@@ -1,238 +1,230 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-        "version": "1.0.0",
-        "title": "Fiuumber User API",
-        "description": "CRUD",
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        }
-    },
-    "servers": [{
-            "url": "https://fiuumber-api-wallets.herokuapp.com/api/wallets-service",
-            "description": "Heroku"
-        },
-        {
-            "url": "http://localhost:8082/api/wallets-service",
-            "description": "Localhost in port 8082"
-        }
-    ],
-    "tags": [{
-        "name": "Fiuumber - Wallets",
-        "description": "API for wallets in the system"
-    }],
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ],
-    "paths": {
-
-        "/wallet/{id}": {
-            "parameters": [{
-                "in": "path",
-                "name": "id",
-                "required": true,
-                "description": "Wallet id",
-                "schema": {
-                    "type": "number",
-                    "example": 1
-                }
-            }],
-            "get": {
-                "tags": [
-                    "Wallet"
-                ],
-                "summary": "Get wallet with given ID",
-                "parameters": [{
-                    "in": "path",
-                    "name": "id",
-                    "required": true,
-                    "description": "Wallet id",
-                    "schema": {
-                        "type": "integer",
-                        "example": 1
-                    }
-                }],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Wallet"
-                        }
-                    },
-                    "404": {
-                        "description": "Failed. Wallet not found."
-                    }
-                }
-            }
-        },
-
-        "/wallet": {
-            "get": {
-                "tags": [
-                    "Wallet"
-                ],
-                "summary": "Get all wallets in system",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Wallet"
-                        }
-                    }
-                }
-            }
-        },
-        "/wallet/{userId}": {
-            "post": {
-                "tags": [
-                    "Wallet"
-                ],
-                "summary": "Create a new wallet in system",
-                "parameters": [{
-                    "in": "path",
-                    "name": "userId",
-                    "required": true,
-                    "description": "Wallet's user id",
-                    "schema": {
-                        "type": "number",
-                        "example": 1
-                    }
-                }],
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Wallet"
-                        }
-                    },
-                    "400": {
-                        "description": "Failed. Bad post data."
-                    }
-                }
-            }
-        },
-
-        "/deposit": {
-            "post": {
-                "tags": [
-                    "Deposit"
-                ],
-                "summary": "Get wallet with given ID",
-                "requestBody": {
-                    "description": "Administrator Object",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/definitions/Deposit"
-                            }
-                        }
-                    }
-                },
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Deposit"
-                        }
-                    },
-                    "404": {
-                        "description": "Failed. Deposit not found."
-                    }
-                }
-            }
-        },
-
-        "/deposit/{depositTxHash}": {
-            "parameters": [{
-                "in": "path",
-                "name": "depositTxHash",
-                "required": true,
-                "description": "Deposit transaction Hash id",
-                "schema": {
-                    "type": "string",
-                    "example": "0x921340bfe5f055871a7b85e64c8992f0c9f7871b2ca4303e695a9915375c951f"
-                }
-            }],
-            "get": {
-                "tags": [
-                    "Deposit"
-                ],
-                "summary": "Get wallet with given ID",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Deposit"
-                        }
-                    },
-                    "404": {
-                        "description": "Failed. Deposit not found."
-                    }
-                }
-            }
-        }
-    },
-
-    "definitions": {
-        "id": {
-            "properties": {
-                "uuid": {
-                    "type": "string"
-                }
-            }
-        },
-        "Wallet": {
-            "type": "object",
-            "properties": {
-                "_id": {
-                    "type": "number",
-                    "example": 1
-                },
-                "userId": {
-                    "type": "number",
-                    "example": 1
-                },
-                "address": {
-                    "type": "string",
-                    "example": "0x6EB5d800214510B5d6e30c249C6EEF6651Ec74a6"
-                },
-                "privateKey": {
-                    "type": "string",
-                    "example": "0x8d731a0107299782fa4a572655f51abd4dc414dc95ea50984d3ce7a4a7d86cec"
-                }
-            }
-        },
-        "Deposit": {
-            "type": "object",
-            "properties": {
-                "_id": {
-                    "type": "number",
-                    "example": 1
-                },
-                "userId": {
-                    "type": "senderId",
-                    "example": 1
-                },
-                "amountInEthers": {
-                    "type": "string",
-                    "example": "0.01"
-                },
-                "senderId": {
-                    "type": "numebr",
-                    "example": 2
-                }
-            }
-        }
+  "openapi": "3.0.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "Fiuumber User API",
+    "description": "CRUD",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
     }
+  },
+  "servers": [
+    {
+      "url": "https://fiuumber-api-wallets.herokuapp.com/api/wallets-service",
+      "description": "Heroku"
+    },
+    {
+      "url": "http://localhost:8082/api/wallets-service",
+      "description": "Localhost in port 8082"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Fiuumber - Wallets",
+      "description": "API for wallets in the system"
+    }
+  ],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
+  "paths": {
+    "/wallet/{id}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "required": true,
+          "description": "Wallet id",
+          "schema": {
+            "type": "number",
+            "example": 1
+          }
+        }
+      ],
+      "get": {
+        "tags": ["Wallet"],
+        "summary": "Get wallet with given ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "Wallet id",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Wallet"
+            }
+          },
+          "404": {
+            "description": "Failed. Wallet not found."
+          }
+        }
+      }
+    },
+
+    "/wallet": {
+      "get": {
+        "tags": ["Wallet"],
+        "summary": "Get all wallets in system",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Wallet"
+            }
+          }
+        }
+      }
+    },
+    "/wallet/{userId}": {
+      "post": {
+        "tags": ["Wallet"],
+        "summary": "Create a new wallet in system",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "description": "Wallet's user id",
+            "schema": {
+              "type": "number",
+              "example": 1
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Wallet"
+            }
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
+    },
+
+    "/deposit": {
+      "post": {
+        "tags": ["Deposit"],
+        "summary": "Get wallet with given ID",
+        "requestBody": {
+          "description": "Administrator Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Deposit"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Deposit"
+            }
+          },
+          "404": {
+            "description": "Failed. Deposit not found."
+          }
+        }
+      }
+    },
+
+    "/deposit/{depositTxHash}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "depositTxHash",
+          "required": true,
+          "description": "Deposit transaction Hash id",
+          "schema": {
+            "type": "string",
+            "example": "0x921340bfe5f055871a7b85e64c8992f0c9f7871b2ca4303e695a9915375c951f"
+          }
+        }
+      ],
+      "get": {
+        "tags": ["Deposit"],
+        "summary": "Get wallet with given ID",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Deposit"
+            }
+          },
+          "404": {
+            "description": "Failed. Deposit not found."
+          }
+        }
+      }
+    }
+  },
+
+  "definitions": {
+    "id": {
+      "properties": {
+        "uuid": {
+          "type": "string"
+        }
+      }
+    },
+    "Wallet": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "number",
+          "example": 1
+        },
+        "userId": {
+          "type": "number",
+          "example": 1
+        },
+        "address": {
+          "type": "string",
+          "example": "0x6EB5d800214510B5d6e30c249C6EEF6651Ec74a6"
+        },
+        "privateKey": {
+          "type": "string",
+          "example": "0x8d731a0107299782fa4a572655f51abd4dc414dc95ea50984d3ce7a4a7d86cec"
+        }
+      }
+    },
+    "Deposit": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "number",
+          "example": 1
+        },
+        "userId": {
+          "type": "senderId",
+          "example": 1
+        },
+        "amountInEthers": {
+          "type": "string",
+          "example": "0.01"
+        },
+        "senderId": {
+          "type": "numebr",
+          "example": 2
+        }
+      }
+    }
+  }
 }
